--- a/examples/index.html
+++ b/examples/index.html
@@ -12,16 +12,19 @@
         let dropManyElement = document.getElementById('dropMany');
         dropManyElement.addEventListener('filedrop', (event) => {
            console.log('dropMany', event.files);
-           dropManyElement.innerText = event.files.map(f => f.name).join('\n');
+          dropManyElement.innerText = event.files.map(f => f.path).join('\n');
+
+
         });
 
         let dropManyImagesElement = document.getElementById('dropManyImages');
         dropManyImagesElement.addEventListener('filedrop', (event) => {
-           console.log('dropManyImages', event.files);
-           dropManyImagesElement.innerText = event.files.map(f => f.name).join('\n');
+           console.log('dropManyImages', event);
+          dropManyImagesElement.innerText = event.files.map(f => f.path).join('\n');
         });
       };
     </script>
+
     <script src='../dist/filedrop.umd.js'></script>
     <style>
     file-drop {
